--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,8 +7,9 @@ form{
     margin: auto;
     padding: 20px;
     width: 400px;
-    background-color: rgb(223, 237, 250);
+    background-color: rgb(248, 248, 248);
     border-radius: 10px;
+    box-shadow: 0px 0px 10px rgb(73, 199, 104);
 }
 form aside{
     text-align: center;
@@ -19,12 +20,15 @@ form input{
 input[type="text"]{
     border-radius: 4px;
     border: 1px solid grey;
-    background-color: rgb(223, 237, 250);
+    background-color: rgb(248, 248, 248);
     height: 30px;
 }
 textarea{
     width: 100%;
     height: 100px;
+    background-color: rgb(248, 248, 248);
+    border: 1px solid rgb(73, 199, 104);
+    border-radius: 4px;
 }
 form h2{
     text-align: center;
