--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,17 @@
 *{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-form{
+.container{
+    display: flex;
     justify-content: center;
     align-items: center;
-    margin: auto;
+    height: 95vh;
+}
+#data{
+    margin-top: 10px;
+}
+form{
+    margin: 0 auto;
     padding: 20px;
     width: 400px;
     background-color: rgb(248, 248, 248);
@@ -16,6 +23,18 @@ form aside{
 }
 form input{
     width: 100%;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px solid;
+}
+#alert{
+    color: rgb(187, 41, 41);
+    font-style: italic;
+    font-size: small;
+}
+#completed{
+    color: rgb(63, 175, 91);
 }
 input[type="text"]{
     border-radius: 4px;
@@ -23,9 +42,14 @@ input[type="text"]{
     background-color: rgb(248, 248, 248);
     height: 30px;
 }
+textarea::placeholder{
+    font-style: italic;
+}
 textarea{
     width: 100%;
     height: 100px;
+    min-width: 100%;
+    min-height: 100px;
     background-color: rgb(248, 248, 248);
     border: 1px solid rgb(73, 199, 104);
     border-radius: 4px;
